Adiciona lista inicial de autores e livros de exemplo na classe Biblioteca